--- a/index.html
+++ b/index.html
@@ -9,5 +9,7 @@
   </head>
   <body>
     <h1>Codecademy is the best way to learn code</h1>
+    <button onclick="importData()">Import Data</button>
+    <script src="/js/index.js"></script>
   </body>
 </html>
